# Aura

./: CLAUDE.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
docs/: requirements.md
docs/plans/: 2026-02-14-phase1-foundation.md  2026-02-15-ui-redesign-design.md  2026-02-15-ui-redesign.md
src/: App.test.tsx  App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql
src-tauri/src/: auth.rs  azure.rs  fogbugz.rs  github.rs  jira.rs  lib.rs  main.rs  repos.rs  sessions.rs  updater.rs
src/components/: IssueList.tsx  PageHeader.tsx  PathAutocomplete.tsx  ProviderIcon.tsx  SkeletonRows.tsx  Spinner.tsx  StatusPill.tsx
src/hooks/: useAzure.ts  useFogBugz.ts  useGitHub.ts  useJira.ts  useRepos.ts  useUpdater.ts
src/layouts/: AppLayout.tsx
src/lib/: timeAgo.ts
src/pages/: IssuesPage.tsx  PullRequestsPage.tsx  ReposPage.tsx  SettingsPage.tsx
