[package]
name = "aura-app"
version = "0.1.0"
description = "Unified developer workspace"
authors = ["you"]
edition = "2021"

[lib]
name = "aura_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-shell = "2"
reqwest = { version = "0.13.2", features = ["json", "query"] }
tokio = { version = "1.49.0", features = ["process"] }
keyring = "3.6.3"
base64 = "0.22.1"
